snapshot-tests/tests/snapshots/parser__bad_keys__empty_pipe.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[wanted]: expected an equals, found a character at ""
  ┌─ empty_pipe:1:3
  │
1 │ ""|=3
  │   ^ expected an equals
